--- a/ProjectFolder/.env
+++ b/ProjectFolder/.env
@@ -1,4 +1,4 @@
-URL="mongodb+srv://rhenzviloria:DbUKnjTRfhm7nLRw@nbalabreservation.lunvqyw.mongodb.net/?retryWrites=true&w=majority&appName=NBALabReservation"
+URL="mongodb+srv://rhenzviloria:DbUKnjTRfhm7nLRw@nbalabreservation.lunvqyw.mongodb.net/lab_reservation?retryWrites=true&w=majority"
 TOKEN_KEY="labReservePrivateKey"
 PORT=3000
 SECRET="secretKEY"
